# cloud_registration_interview

./: CMakeLists.txt  README.md
app/: cloud_registration.cpp
data/: README.md  cloud_002.ply  cloud_003.ply
include/: icp.hpp  visualization.hpp
src/: .pcl_icp_utils.cpp.swp  icp.cpp  visualization.cpp
